# rr_motor_controller

./: CMakeLists.txt  README.md  package.xml  test_detail.xml
include/rr_motor_controller/: dc_linear.hpp  differential.hpp  dutyconv.hpp  encoder.hpp  motor.hpp  motorcmdproc.hpp  rr_motor_controller.hpp  rr_motor_controller_common.hpp  rr_motor_ecu_node.hpp  visibility_control.h
scripts/: send_motors_command.py
src/: dc_linear.cpp  differential.cpp  encoder.cpp  motor.cpp  rr_motor_controller.cpp  rr_motor_controller_node.cpp  rr_motor_ecu_node.cpp
test/: test_dc_linear.cpp  test_differential.cpp  test_encoder.cpp  test_motor.cpp  test_rr_motor_controller.cpp
